new proj/src/objects/GE_HQ_Business_Courtesy__c.object
<CustomObject>
    <description>Within SFDC, this object is used to store users complete compliance requirements necessary for entertaining and/or gifts to see if approval is required and ability to link the business courtesy to Account and/or OPPPTY but not required</description>
    <fields>
        <fullName>GE_HQ_Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Courtesies</relationshipLabel>
        <relationshipName>Business_Courtesies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CountryFm__c</fullName>
        <formula>GE_HQ_CountryLkup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CountryLkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>Business Courtesies</relationshipLabel>
        <relationshipName>Business_Courtesies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CountryPklt__c</fullName>
        <inlineHelpText>In what country will the business courtesy be provided?</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Email__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Meal_Entertainment__c</fullName>
        <inlineHelpText>What type of business courtesy would you like to provide?</inlineHelpText>
        <label>Meal Entertainment</label>
        <picklist>
            <picklistValues>
                <fullName>Meal or entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Oppty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Business Courtesies</relationshipLabel>
        <relationshipName>Business_Courtesies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Phone__c</fullName>
        <defaultValue>$User.Phone</defaultValue>
        <label>Requestor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Plan_Spend_Entertainment__c</fullName>
        <inlineHelpText>Do you plan on spending more then $150* a person?</inlineHelpText>
        <label>Plan Spend Entertainment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Plan_Spend_Gift__c</fullName>
        <inlineHelpText>Do you plan on spending more than $100* a person or do you know that GE has spent more than $200 on the same customer this year?</inlineHelpText>
        <label>Plan Spend Gift</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Rept_Emp_Loc__c</fullName>
        <inlineHelpText>Is the recipient employed by a local, state or federal government?</inlineHelpText>
        <label>Rept Emp Loc</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Rept_Emp_Org__c</fullName>
        <inlineHelpText>Is the recipient employed by an organization that is owned or controlled by a local, state, or federal government?</inlineHelpText>
        <label>Rept Emp Org</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Req_Dt__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Requested date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SSO__c</fullName>
        <formula>$User.GE_HQ_SSO_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor SSO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sanct_Cnty__c</fullName>
        <formula>IF( OR(GE_HQ_CountryLkup__r.GE_HQ_Sanct_Cnty__c = True, GE_HQ_CountryLkup__r.GE_HQ_Sanct_Cnty__c = TRUE) , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sanctioned Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status_Flag__c</fullName>
        <formula>IF(OR(TEXT(GE_HQ_Rept_Emp_Loc__c)=&apos;Yes&apos;,
      TEXT(GE_HQ_Rept_Emp_Org__c)=&apos;Yes&apos;,
      TEXT(GE_HQ_Travel_Exp__c)=&apos;Yes&apos;,
      GE_HQ_CountryLkup__r.GE_HQ_Sanct_Cnty__c = True,
      TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Other&apos;, 
      AND(TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Gift&apos;,TEXT(GE_HQ_Plan_Spend_Gift__c)=&apos;Yes&apos;), 
      AND(TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Meal or entertainment&apos;,TEXT(GE_HQ_Will_Rep_Fm_GE_Pres__c)=&apos;Yes&apos;,TEXT(GE_HQ_Plan_Spend_Entertainment__c)=&apos;Yes&apos;),    	

      AND(TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Meal or entertainment&apos;,TEXT(GE_HQ_Will_Rep_Fm_GE_Pres__c)=&apos;No&apos;,TEXT(GE_HQ_Plan_Spend_Gift__c)=&apos;Yes&apos;)), &apos;This type of business courtesy requires approval&apos;, 

IF(OR(AND(TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Gift&apos;,TEXT(GE_HQ_Plan_Spend_Gift__c)=&quot;No&quot;),
AND(TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Meal or entertainment&apos;,TEXT(GE_HQ_Will_Rep_Fm_GE_Pres__c)=&apos;Yes&apos;,TEXT(GE_HQ_Plan_Spend_Entertainment__c)=&apos;No&apos;),
AND(TEXT(GE_HQ_Meal_Entertainment__c)=&apos;Meal or entertainment&apos;,TEXT(GE_HQ_Will_Rep_Fm_GE_Pres__c)=&apos;No&apos;,TEXT(GE_HQ_Plan_Spend_Gift__c)=&apos;No&apos;)), &apos;This type of business courtesy does not require legal approval&apos;, &apos;In Progress&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status__c</fullName>
        <formula>IF( (GE_HQ_Status_Flag__c =&apos;This type of business courtesy requires approval&apos; ), 
IMAGE(&quot;/resource/1310550839000/RiskTopicSignalsRed&quot; ,&quot;Red&quot;,20,20) &amp;&quot; - Red&quot; ,IF( (GE_HQ_Status_Flag__c=&apos;This type of business courtesy does not require legal approval&apos;),IMAGE(&quot;/resource/1310550794000/RiskTopicSignalsGreen&quot;,&quot;Green&quot; ,20,20) &amp; &quot; - Green&quot; ,IF( (GE_HQ_Status_Flag__c=&apos;In Progress&apos;),IMAGE(&quot;/resource/1310550957000/RiskTopicSignalsYellow&quot;,&quot;Yellow&quot;,20,20) &amp; &quot; - Yellow&quot; ,&quot;&quot;)))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Threshold_Events__c</fullName>
        <formula>GE_HQ_CountryLkup__r.GE_HQ_Threshold_Events__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threshold Events</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Threshold_Gift__c</fullName>
        <formula>GE_HQ_CountryLkup__r.GE_HQ_Threshold_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threshold Gift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Thresholds_Gift_Aggregate__c</fullName>
        <formula>GE_HQ_CountryLkup__r.GE_HQ_Thresholds_Gift_Aggregate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thresholds Gift Aggregate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Travel_Exp__c</fullName>
        <inlineHelpText>Do you want to pay for travel expenses for someone who is not a GE employee?</inlineHelpText>
        <label>Travel Exp</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Will_Rep_Fm_GE_Pres__c</fullName>
        <inlineHelpText>Will a representative from GE be present?</inlineHelpText>
        <label>Will Rep Fm GE Pres</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Courtesy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Acc__c</columns>
        <columns>GE_HQ_Oppty__c</columns>
        <columns>GE_HQ_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BC-{YYYY}{MM}-{0}</displayFormat>
        <label>Business Courtesy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Courtesies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>